labs/azarc-01/template/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "machines_vm_linux_arc01_name": {
            "defaultValue": "vm-linux-arc01",
            "type": "String"
        },
        "networkInterfaces_vm_win_sever1517_name": {
            "defaultValue": "vm-win-sever1517",
            "type": "String"
        },
        "publicIPAddresses_vm_win_sever1_ip_name": {
            "defaultValue": "vm-win-sever1-ip",
            "type": "String"
        },
        "virtualNetworks_vm_win_sever1_vnet_name": {
            "defaultValue": "vm-win-sever1-vnet",
            "type": "String"
        },
        "networkSecurityGroups_vm_win_sever1_nsg_name": {
            "defaultValue": "vm-win-sever1-nsg",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.HybridCompute/machines",
            "apiVersion": "2025-01-13",
            "name": "[parameters('machines_vm_linux_arc01_name')]",
            "location": "koreacentral",
            "tags": {
                "ArcSQLServerExtensionDeployment": "Disabled",
                "City": "SEOUL",
                "CountryOrRegion": "KR",
                "Datacenter": "KC",
                "StateOrDistrict": "SEOUL"
            },
            "identity": {
                "type": "SystemAssigned"
            },
            "properties": {
                "osType": "linux",
                "osProfile": {},
                "vmId": "c80d53fa-a3af-4382-ad65-ed607f3bacee",
                "clientPublicKey": "MIIBCgKCAQEAtd3I7R+YefXWLtiaLicJ5nEy1qmcV9URt0i4aaGKlJpCNY3KPXTJ+RDxALiwWqGNafYdoVe4pdCWIe+EIp+xbhOKJcFlwQAjfBI7A1bcPcDXFyfDUR5TFgfienTBCTUM90+q3rwjH6MZr++yhaZaH/y+XMAAN3KSkIQ1foQqgsGwNOp2aZcWMSBk59DiHPntf/ttBKp69ckmIvs3tIJMM+OzozZxkavlDjHRYN9YK06Dr87AyVQ4CA4yJhnUgzmmPIwezp4peOd1DQDCErlIBxaIQCdMd06ZYgC5u9NE4Dx896QoRxDmePnrKNR2US6sJxr/wb7f8h+qE4jpJKQbQQIDAQAB",
                "mssqlDiscovered": "false",
                "cloudMetadata": {},
                "serviceStatuses": {
                    "extensionService": {
                        "status": "active",
                        "startupType": "enabled"
                    },
                    "guestConfigurationService": {
                        "status": "active",
                        "startupType": "enabled"
                    }
                },
                "agentUpgrade": {
                    "enableAutomaticUpgrade": false
                },
                "licenseProfile": {
                    "esuProfile": {
                        "licenseAssignmentState": "NotAssigned"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2024-05-01",
            "name": "[parameters('networkSecurityGroups_vm_win_sever1_nsg_name')]",
            "location": "koreacentral",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_vm_win_sever1_nsg_name'), 'RDP')]",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2024-05-01",
            "name": "[parameters('publicIPAddresses_vm_win_sever1_ip_name')]",
            "location": "koreacentral",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "ipAddress": "4.218.14.122",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2024-05-01",
            "name": "[parameters('virtualNetworks_vm_win_sever1_vnet_name')]",
            "location": "koreacentral",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.1.0.0/16"
                    ]
                },
                "privateEndpointVNetPolicies": "Disabled",
                "subnets": [
                    {
                        "name": "default",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vm_win_sever1_vnet_name'), 'default')]",
                        "properties": {
                            "addressPrefix": "10.1.0.0/24",
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets"
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false
            }
        },
        {
            "type": "Microsoft.HybridCompute/machines/extensions",
            "apiVersion": "2025-01-13",
            "name": "[concat(parameters('machines_vm_linux_arc01_name'), '/AzureMonitorLinuxAgent')]",
            "location": "koreacentral",
            "dependsOn": [
                "[resourceId('Microsoft.HybridCompute/machines', parameters('machines_vm_linux_arc01_name'))]"
            ],
            "properties": {
                "publisher": "Microsoft.Azure.Monitor",
                "type": "AzureMonitorLinuxAgent",
                "typeHandlerVersion": "1.35.6",
                "autoUpgradeMinorVersion": false,
                "enableAutomaticUpgrade": true,
                "instanceView": {
                    "name": "AzureMonitorLinuxAgent",
                    "type": "AzureMonitorLinuxAgent",
                    "typeHandlerVersion": "1.35.6",
                    "status": {
                        "code": "0",
                        "level": "Information",
                        "message": "Extension Message: Enable succeeded"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2024-05-01",
            "name": "[concat(parameters('networkSecurityGroups_vm_win_sever1_nsg_name'), '/RDP')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_vm_win_sever1_nsg_name'))]"
            ],
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2024-05-01",
            "name": "[concat(parameters('virtualNetworks_vm_win_sever1_vnet_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vm_win_sever1_vnet_name'))]"
            ],
            "properties": {
                "addressPrefix": "10.1.0.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2024-05-01",
            "name": "[parameters('networkInterfaces_vm_win_sever1517_name')]",
            "location": "koreacentral",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_vm_win_sever1_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vm_win_sever1_vnet_name'), 'default')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_vm_win_sever1_nsg_name'))]"
            ],
            "kind": "Regular",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm_win_sever1517_name')), '/ipConfigurations/ipconfig1')]",
                        "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
                        "properties": {
                            "privateIPAddress": "10.1.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_vm_win_sever1_ip_name'))]",
                                "properties": {
                                    "deleteOption": "Detach"
                                }
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vm_win_sever1_vnet_name'), 'default')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "disableTcpStateTracking": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_vm_win_sever1_nsg_name'))]"
                },
                "nicType": "Standard",
                "auxiliaryMode": "None",
                "auxiliarySku": "None"
            }
        }
    ]
}
